# Naisu1

./: .env.example  Cargo.toml  README.md
.github/workflows/: rust.yml
contracts/sui/: Move.toml  Published.toml
frontend/: .env.example
frontend/src/: main.tsx
frontend/src/components/ui/: Label.tsx
frontend/src/features/ai/: index.ts
frontend/src/features/ai/components/: AIChat.tsx
frontend/src/features/intent/: index.ts
frontend/src/features/intent/components/: IntentCard.tsx  ProgressTracker.tsx  YieldIntentForm.tsx
frontend/src/features/solver/: index.ts
frontend/src/features/solver/components/: SolverRace.tsx
frontend/src/features/solver/hooks/: useSolverCompetition.ts
frontend/src/features/wallet/: index.ts
frontend/src/lib/: constants.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/types/: index.ts
naisu-agent/: .env.example  Cargo.toml
naisu-agent/src/: lib.rs  main.rs  solver.rs  solver_factory.rs
naisu-agent/src/bots/: cetus_solver.rs  deepbook_solver.rs  mod.rs  navi_solver.rs  scallop_solver.rs  staking_solver.rs
naisu-agent/src/config/: mod.rs  network.rs
naisu-agent/src/executor/: mod.rs  navi_executor.rs  real_executor.rs
naisu-api/: Cargo.toml
naisu-api/src/: logging.rs  main.rs  route.rs  state.rs
naisu-api/src/common/: server.rs
naisu-api/src/feature/: mod.rs
naisu-api/src/feature/health/: handler.rs  route.rs
naisu-api/src/feature/intent/: handler.rs  mod.rs  route.rs
naisu-api/src/feature/network/: mod.rs
naisu-api/src/feature/solver/: handler.rs  route.rs
naisu-api/src/feature/strategy/: handler.rs  route.rs
naisu-api/src/middleware/: http_trace.rs
naisu-contracts/: test-cetus-integration.ts
naisu-contracts/sui/: Move.toml  Published.toml
naisu-contracts/sui/sources/: adapter.move  cetus_adapter.move  cetus_executor.move  intent.move  naisu_cetus_bridge.move
naisu-core/src/: intent.rs  lib.rs
naisu-frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts
naisu-frontend/src/: index.css  main.tsx  vite-env.d.ts
naisu-frontend/src/components/: NetworkBadge.tsx  NetworkSwitcher.tsx
naisu-frontend/src/components/cetus/: AvailablePoolsList.tsx  PoolSelector.tsx  index.ts
naisu-frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  dropdown-menu.tsx  index.ts
naisu-frontend/src/config/: contracts.ts  wagmi.ts
naisu-frontend/src/contexts/: NetworkContext.tsx
naisu-frontend/src/features/bridge/: index.ts
naisu-frontend/src/features/intent/: index.ts
naisu-frontend/src/hooks/: index.ts  useNetworkConfig.ts
naisu-frontend/src/hooks/sui/: useQueryCetusPools.ts  useQueryCetusPositions.ts  useQuerySuiTokenBalance.ts
naisu-frontend/src/lib/: cetus-helpers.ts  cetus-liquidity-helpers.ts  constants.ts  utils.ts
naisu-frontend/src/lib/cetus/: cetusService.ts  index.ts
naisu-frontend/src/routes/: __root.tsx  index.tsx  pools.tsx  smart-swap.tsx  swap.tsx  test-cetus-integrate.tsx  test-cetus-simple.tsx  test-cetus.tsx  test-claim-fees.tsx  test-close-position.tsx  test-create-pool.tsx  test-open-position.tsx  test-swap.tsx  zap.tsx
naisu-sui/src/: cctp.rs  client.rs  config.rs  lib.rs  protocols.rs  ptb.rs  ptb_cetus.rs
naisu-sui/src/adapters/: cetus.rs  mod.rs  navi.rs  scallop.rs
(+37 files in other folders)
