[workspace]
members = [
    "naisu-core",
    "naisu-sui",
    "naisu-agent",
    "naisu-api",
]
resolver = "2"

[workspace.package]
version = "0.0.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/user/naisu1"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "=1.0.215", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# EVM (alloy-rs)
alloy = { version = "0.12", default-features = false, features = [
    "rpc-client",
    "provider-http",
    "provider-ws",
    "signer-local",
    "contract",
    "node-bindings",
    "rpc-types",
] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }

# Sui SDK
sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "mainnet" }

# Utils
dotenvy = "0.15"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
hex = "0.4"

# Internal crates
naisu-core = { path = "naisu-core" }
naisu-sui = { path = "naisu-sui" }
naisu-agent = { path = "naisu-agent" }
