[package]
name = "naisu-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "naisu-agent"
path = "src/main.rs"

[dependencies]
naisu-core = { workspace = true }
naisu-sui = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
async-trait = "0.1"
