[package]
name = "naisu-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "naisu-agent"
path = "src/main.rs"

[[bin]]
name = "solver-daemon"
path = "src/bin/solver_daemon.rs"

[dependencies]
naisu-core = { workspace = true }
naisu-sui = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
async-trait = "0.1"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
